fixing config file (added websites)

--- a/_config.yml
+++ b/_config.yml
@@ -130,6 +130,8 @@ author:
   weibo            :
   xing             :
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
+  researchgate     : "https://www.researchgate.net/profile/Meysam-Asgari-2"
+  google-scholar   : "https://scholar.google.com/citations?hl=en&user=lorQE_AAAAAJ"
 
 
 # Reading Files
