modify youtube dl

--- a/_config.yml
+++ b/_config.yml
@@ -131,7 +131,6 @@ author:
   xing             :
   youtube          : # "https://youtube.com/c/MichaelRoseDesign"
   researchgate     : "https://www.researchgate.net/profile/Meysam-Asgari-2"
-  google-scholar   : "https://scholar.google.com/citations?hl=en&user=lorQE_AAAAAJ"
 
 
 # Reading Files
@@ -268,6 +267,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: true
-      share: true
+      comments: false
+      share: false
       related: true
